tests/ui/impl-trait/issues/issue-86800.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/issue-86800.rs:35:5
   |
LL | type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                        --- this generic parameter must be used with a generic lifetime parameter
...
LL |     f
   |     ^

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/issue-86800.rs:44:5
   |
LL |   type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                          --- this generic parameter must be used with a generic lifetime parameter
...
LL | /     {
LL | |
LL | |
LL | |         let mut conn = Connection {};
LL | |         let mut transaction = TestTransaction { conn: &mut conn };
LL | |         f(&mut transaction).await
LL | |     }
   | |_____^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
